--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Reason App</title>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
+      body {
+        font-family: sans-serif;
+        font-size: 16vmin;
+        line-height: 1.5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      button {
+        font-size: inherit;
+      }
+    </style>
   </head>
-  <body>
+  <body id="body">
    <div>Reason App</div>
    <script src="/static/bundle.js" charset="utf-8"></script>
   </body>
